# rustris

./: .gitignore  Cargo.toml  LICENSE.md  README.md  tauri.conf.json
.github/: FUNDING.yml  README.md
.github/workflows/: build.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: AddGameModal.tsx  ConfirmationModal.tsx  CopyToClipboard.tsx  GameDetail.tsx  GameLog.tsx  InfoModal.tsx  Layout.tsx  ProtonDownloader.tsx  SettingsModal.tsx  WineRunnerManager.tsx
frontend/src/components/addingGames/: ConfigureGameStep.tsx  InstallGameStep.tsx  SearchGamesStep.tsx  ViewInstallerStep.tsx
frontend/src/context/: GameContext.tsx
frontend/src/pages/: InitialSetup.tsx  Library.tsx
frontend/src/services/: GameService.ts  LutrisService.ts  UtilityService.ts  WineService.ts  index.ts
frontend/src/types/: lutris.ts
src/: artwork_commands.rs  game_commands.rs  game_log_buffer.rs  installer_commands.rs  lutris_api.rs  lutris_cli.rs  lutris_commands.rs  lutris_db.rs  lutris_util.rs  main.rs  proton_commands.rs  rustris_paths.rs  utility_commands.rs
